Fix description mobile width

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -175,7 +175,8 @@ button:hover a {
     font-family: 'Georgia';
     font-style: italic;
     line-height: 32px;
-    margin-right: 90px;
+    margin-left: 0px;
+    max-width: 500px;
   }
 }
 
@@ -270,7 +271,7 @@ button:hover a {
 }
 
 #contact {
-  background: #e6d0d0;
+  background: #e2d5d5;
   position: relative;
 
   .container {
